Update report (pre-requisite knowledge)

--- a/design-docs/Report Bibliography.bib
+++ b/design-docs/Report Bibliography.bib
@@ -71,6 +71,14 @@
   date={2017},
   url={https://en.wikipedia.org/wiki/Semantic\_search}
 }
+}
+
+@online{wikipediaregex,
+  author={Wikipedia},
+  title={Regular expression - Wikipedia},
+  date={2018},
+  url={https://en.wikipedia.org/wiki/Regular\_expression}
+}
 
 @online{javasysreqs,
   author={{Oracle Corporation}},
