--- a/design-docs/Report Bibliography.bib
+++ b/design-docs/Report Bibliography.bib
@@ -55,7 +55,7 @@
   author={Wikipedia},
   title={Visitor pattern - Wikipedia},
   date={2017},
-  url={https://en.wikipedia.org/wiki/Visitor\_pattern}
+  url={https://en.wikipedia.org/wiki/Visitor_pattern}
 }
 
 @online{wikipediacompilercompiler,
@@ -69,7 +69,7 @@
   author={Wikipedia},
   title={Semantic search - Wikipedia},
   date={2017},
-  url={https://en.wikipedia.org/wiki/Semantic\_search}
+  url={https://en.wikipedia.org/wiki/Semantic_search}
 }
 }
 
@@ -77,12 +77,12 @@
   author={Wikipedia},
   title={Regular expression - Wikipedia},
   date={2018},
-  url={https://en.wikipedia.org/wiki/Regular\_expression}
+  url={https://en.wikipedia.org/wiki/Regular_expression}
 }
 
 @online{javasysreqs,
   author={{Oracle Corporation}},
-  title={What are the system requirements for Java? },
+  title={What are the system requirements for Java?},
   date={2017},
   url={https://java.com/en/download/help/sysreq.xml}
 }
