--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -403,6 +403,20 @@ This section describes csar's low-level design, that is, describing csar in term
 \section{Implementation}
 % TODO write
 
+\subsection{Code references}
+\begin{itemize}
+  \item Ignore files syntax - \url{https://git-scm.com/docs/gitignore} and \url{https://github.com/EE/gitignore-to-glob/blob/master/lib/gitignore-to-glob.js}
+  \item Test cases for ignore files - \url{https://www.atlassian.com/git/tutorials/gitignore}
+  \item Git repository integration - \url{https://git-scm.com/docs/git-ls-files}
+  \item Java 8 ANTLR Grammar - \href{https://github.com/antlr/grammars-v4/blob/02711067f82bed8e0c8dfd25e80f4f8ae2472abd/java8-pt/JavaLexer.g4}{Java 8 Lexer}, \href{https://github.com/antlr/grammars-v4/blob/02711067f82bed8e0c8dfd25e80f4f8ae2472abd/java8-pt/JavaParser.g4}{Java 8 Parser}, \href{https://github.com/antlr/grammars-v4/blob/02711067f82bed8e0c8dfd25e80f4f8ae2472abd/_grammar-test/src/test/java/TestJava8pt.java}{Java 8 Test} and \href{https://github.com/antlr/grammars-v4/blob/02711067f82bed8e0c8dfd25e80f4f8ae2472abd/java8-pt/examples/AllInOne8.java}{Java 8 Test Input}
+  \item `JAVA\_LETTER' rule in `CsarLexer' - \url{https://github.com/antlr/grammars-v4/blob/master/java8/Java8.g4}
+  Hence, I have not written the Java 8 lexer, parser, testing code, nor the testing resources.
+  \item Using JCommander parameters in `CsarContext' - \url{http://jcommander.org/}
+  \item ANTLR process settings in `build.gradle' - \url{https://docs.gradle.org/4.0.1/userguide/antlr\_plugin.html\#sec:controlling\_the\_antlr\_generator\_process}
+  \item JaCoCo in `build.gradle' - \url{http://www.jworks.nl/2013/06/03/jacoco-code-coverage-with-gradle/}
+  \item Counting substring occurrence in a String - \url{https://stackoverflow.com/a/767910}
+\end{itemize}
+
 % Testing
 \section{Testing}
 % TODO write
