Update report (recommended font + line spacing)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -23,6 +23,12 @@
   postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
 }
 
+% Font
+\renewcommand{\familydefault}{\sfdefault}
+
+% Line spacing
+\renewcommand{\baselinestretch}{1.5}
+
 % Document metadata
 \title{csar: Query-driven Code Search and Refactoring Framework}
 \author{Deniz Ozmus}
@@ -53,7 +59,7 @@
   {\MyAuthor\par}
   \vspace{0.5cm}
   {\itshape Supervised by }{ \supervisor\par}
-  \vspace{13cm}
+  \vspace{11cm}
   {\today\par}
 \end{titlepage}
 
