Update report (testing structure)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -425,6 +425,12 @@ This section describes csar's low-level design, that is, describing csar in term
 
 % Testing
 \section{Testing}
+This section describes the two main testing mechanisms I used, which are unit testing and manual testing.
+
+\subsection{Unit testing}
+% TODO write
+
+\subsection{Manual testing}
 % TODO write
 
 % Analysis
