Update report (margins)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -2,6 +2,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{authoraftertitle}
 
+% Margins
+\usepackage[margin=1in]{geometry}
+
 % bibliography
 \usepackage[style=authoryear,sorting=none,backend=biber]{biblatex}
 \addbibresource{Report Bibliography.bib}
@@ -55,11 +58,11 @@
 \begin{titlepage}
   \centering
   {\Large \MyTitle\par}
-  \vspace{3cm}
+  \vspace{5cm}
   {\MyAuthor\par}
   \vspace{0.5cm}
   {\itshape Supervised by }{ \supervisor\par}
-  \vspace{11cm}
+  \vspace{12cm}
   {\today\par}
 \end{titlepage}
 
