Update report (english grammar: section headers)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -114,7 +114,7 @@ The final requirements it will have are described in the Scope subsection.
   \item Support git repositories - csar should be able to detect if the current project is a git repository, and accordingly only search files which are tracked by the repository.
 \end{enumerate}
 
-\subsection{Secondary Requirements}
+\subsection{Secondary requirements}
 These requirements are non-essential, but may be addressed if there is sufficient time, or if priorities shift.
 The benefits and implementation details of each will be outlined.
 
@@ -146,7 +146,7 @@ Some possibilities are listed below:
   \item Svn: `svn list -R' or `svn status'
 \end{itemize}
 
-\subsubsection{IntelliJ IDEA Integration}
+\subsubsection{IntelliJ IDEA integration}
 We may want to integrate csar into the IntelliJ IDEA IDE such that if a user of csar uses this IDE, they can use csar from within it. 
 csar can be integrated into it in one of two ways:
 \begin{itemize}
@@ -158,7 +158,7 @@ csar can be integrated into it in one of two ways:
   This field would allow users to type csar queries and then execute them, displaying the results in a standard IDEA result window.
 \end{itemize}
 
-\subsection{Non-functional Requirements}
+\subsection{Non-functional requirements}
 \begin{itemize}
   \item Documentation - csar will be accompanied by four pieces of documentation: the report (design and implementation details), javadocs (component-level details), readme (how to run csar), and the user guide (how to use csar).
   \item Efficiency - the implementation will maximize the usage of algorithms which run in polynomial time.
