Update report (rename title: gradle references)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -428,7 +428,7 @@ csar has reused some code, or ideas from external sources within its code. They 
   \item Counting substring occurrence in a String - \url{https://stackoverflow.com/a/767910}
 \end{itemize}
 
-\subsection{Gradle build references}
+\subsection{Gradle references}
 Gradle is configured through scripts, the following references were used to help create them. They are listed below:
 
 \begin{itemize}
