--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -188,7 +188,7 @@ The query language will have two versions: 1.x.x (implemented) and $ \geq $ 2.x.
 The implemented version will formally define the scope of the query language in the implementation, and the potential improvements version will define a more exhaustive schema.
 My goal is not to develop an exhaustive query language which can express any language element in any language since it would take very long (it would constitute an entire project itself), hence $ \geq $ 2.x.x will be more exhaustive than 1.x.x but not the ultimate query language.
 
-Parsing of java source code (Java 8) will be supported.
+csar will use ANTLR as its parser-generator because it has a pre-written grammar for Java 8 \autocite{CodeReferences}, which csar will aim to support.
 csar will be designed such that other programming languages can easily be integrated into it in the future.
 A developer will need to write a plugin for each programming language they wish to use, analogously to how the java plugin will be written.
 This will include the implementation of a language parser, post-processors, searcher, and refactorer.
