Update report (unit testing of csar-java + misc fixes)

--- a/design-docs/Report Bibliography.bib
+++ b/design-docs/Report Bibliography.bib
@@ -83,6 +83,13 @@
 @online{javasysreqs,
   author={{Oracle Corporation}},
   title={What are the system requirements for Java?},
-  date={2017},
+  date={2018},
   url={https://java.com/en/download/help/sysreq.xml}
+}
+
+@online{javadocsnumber,
+  author={{Oracle Corporation}},
+  title={Number (Java Platform SE 8)},
+  date={2018},
+  url={https://docs.oracle.com/javase/8/docs/api/java/lang/Number.html}
 }
