Update report (fix citations)

--- a/design-docs/Report Bibliography.bib
+++ b/design-docs/Report Bibliography.bib
@@ -45,36 +45,35 @@
 }
 
 @online{wikipediaparsing,
-  author={Wikipedia},
+  author={{Wikipedia}},
   title={Parsing - Wikipedia},
   date={2017},
   url={https://en.wikipedia.org/wiki/Parsing}
 }
 
 @online{wikipediavisitorpattern,
-  author={Wikipedia},
+  author={{Wikipedia}},
   title={Visitor pattern - Wikipedia},
   date={2017},
   url={https://en.wikipedia.org/wiki/Visitor_pattern}
 }
 
 @online{wikipediacompilercompiler,
-  author={Wikipedia},
+  author={{Wikipedia}},
   title={Compiler-compiler - Wikipedia},
   date={2017},
   url={https://en.wikipedia.org/wiki/Compiler-compiler}
 }
 
 @online{wikipediasemanticsearch,
-  author={Wikipedia},
+  author={{Wikipedia}},
   title={Semantic search - Wikipedia},
   date={2017},
   url={https://en.wikipedia.org/wiki/Semantic_search}
 }
-}
 
 @online{wikipediaregex,
-  author={Wikipedia},
+  author={{Wikipedia}},
   title={Regular expression - Wikipedia},
   date={2018},
   url={https://en.wikipedia.org/wiki/Regular_expression}
@@ -92,4 +91,18 @@
   title={Number (Java Platform SE 8)},
   date={2018},
   url={https://docs.oracle.com/javase/8/docs/api/java/lang/Number.html}
+}
+
+@online{gradlevsmaven,
+  author={{Gradle Inc.}},
+  title={Gradle | Gradle vs Maven Comparison},
+  date={2018},
+  url={https://gradle.org/maven-vs-gradle/}
+}
+
+@online{drdobbswhyusegradle,
+  author={Benjamin Muschko},
+  title={Why Build Your Java Projects with Gradle Rather than Ant or Maven? | Dr Dobb's},
+  date={2014},
+  url={http://www.drdobbs.com/jvm/why-build-your-java-projects-with-gradle/240168608}
 }
