Update report (analysis structure)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -537,6 +537,15 @@ This coverage figure is less than expected because it includes coverage for the 
 
 % Analysis
 \section{Analysis}
+This section will evaluate the achievements of the project, the author, and future work which ties in with this project.
+
+\subsection{Project's achievements}
+% TODO write
+
+\subsection{Author's achievements}
+% TODO write
+
+\subsection{Future work}
 % TODO write
 
 % Bibliography
